# VideoRLM

./: .gitignore  .mcp.json  Action100M-integration-plan.md  Action100M-paper-notes.md  CLAUDE.md  README.md  V-JEPA2-integration-plan.md  V-JEPA2-paper-notes.md  VIDEO_README.md  VIDEO_README_with_images.md  VL-JEPA-integration-plan.md  VL-JEPA-paper-notes.md  benchmark.py  pyproject.toml  run.sh  run_experiment.py  run_test_blend.py  run_test_oolong.py  run_test_pixel.py  run_test_vqa.py  run_video.py  test_e2e_all_capabilities.py  unified-integration-plan.md  web_app.py
.claude/: launch.json  settings.json
.claude-plugin/: plugin.json
.claude/agents/: video-analyst.md  video-decomposer.md  video-segment-analyst.md  video-synthesizer.md  video-triage.md
.claude/hooks/: notify.sh  (+2 more)
.next/: trace  trace-build
docs/: audit-report.md
examples/: video_understanding.py
frontend/: package-lock.json  package.json  test_ui.js
hooks/: hooks.json  kuavi_trace_logger.sh  validate_analysis.sh  validate_transcript_claims.sh  validate_visual_confirmation.sh
kuavi/: __init__.py  __main__.py  captioners.py  captioning.py  cli.py  context.py  corpus.py  indexer.py  loader.py  mcp_server.py  probes.py  prompts.py  scene_detection.py  search.py  types.py  verbose.py
tests/: test_action_anticipation.py  test_action_first.py  test_captioners.py  test_cli.py  test_corpus.py  test_extract_frames.py  test_mcp_budget.py  test_mcp_eval.py  test_mcp_pixel_tools.py  test_mcp_server.py  test_mcp_shards.py  test_orchestration.py  test_overlapping_vjepa.py  test_parsing.py  test_predictor_wiring.py  test_probes.py  test_quality_scoring.py  test_rlm_optimizations.py  test_scene_detection.py  test_scene_detection_vjepa.py  test_self_refine_v2.py  test_semantic_dedup.py  test_spatial_features.py  test_temporal_search_fix.py  test_video_context.py  test_video_indexer.py  test_video_loader.py  test_video_search_tools.py  test_vjepa2_presets.py  test_world_model.py
web_static/: index.html
(+122 files in other folders)
